--- a/BackendEcommerchSystem/BackendEcommerchSystem/appsettings.json
+++ b/BackendEcommerchSystem/BackendEcommerchSystem/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Connection": "Server=ELSHAZLY\\SQLEXPRESS;Database=EcommerceDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
