Brief description of what you changed

--- a/JwtAuthDotNet/JwtAuthDotNet/appsettings.json
+++ b/JwtAuthDotNet/JwtAuthDotNet/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=ELSHAZLY\\SQLEXPRESS;Database=EcommerceDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "UserDatabase":
+    "Server=ELSHAZLY\\SQLEXPRESS;Database=UserDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,8 +14,6 @@
     "Key": "ThisIsMyTopSecretKeyForJWT1234567890!@",
     "Issuer": "MyEcommerceBackend",
     "Audience": "MyEcommerceUsers",
-    "DurationInDays": 30 
-
+    "DurationInDays": 30
   }
-
 }
